--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.6.6",
 		"next": "12.1.6",
 		"postcss-cli": "^9.1.0",
 		"react": "18.2.0",
