--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"next": "12.1.6",
 		"postcss-cli": "^9.1.0",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"swiper": "^8.4.5"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.7",
